# DecodeLabs-Internship

./: .gitignore  README.md  readme.md  update_readmes.py
AI/: README.md
AI/Project-1/: README.md  RuleBased.py
AI/Project-2/: .gitignore  Project_2.py  README.md
Backend Development/: README.md
Backend Development/Project-2 Frontend/: index.html
Backend Development/Project-4/: .env.example  index.html  package.json  readme.md  requirement.txt  server.js
Block-Chain/: README.md
Block-Chain/Project-1/: .gitignore  51%_Attack.py  Block.py  Blockchain.py  Dumb_Hacker#1.py  Main.py  Node.py  (+2 more)
Cloud-Computing/: README.md  index.html
Cyber-Security/: README.md
DEVOOPS/: README.md
Frontend-Development/: README.md
Full-Stack-development/: README.md
JAVA/: README.md
PYTHON/: README.md
Robotics-Automation/: README.md
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/: package.xml  setup.py
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/arm_controller/: pick_and_place.py  pick_cup.py
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/launch/: pick_place.launch.py
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/models/coffee_cup/: model.config  model.sdf
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/models/industrial_table/: model.config  model.sdf
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/models/robot_pedestal/: model.config  model.sdf
Robotics-Automation/Project-1/decode_project_ws/src/arm_controller/worlds/: pick_place.world
(+168 files in other folders)
